# LOGOS-Engine

./: .gitignore  AGENTS.md  README.md  catalog.okf.yaml  pyproject.toml
admin/: README.md  meaning-test-admin.html
audits/: AUDIT-2026-07-02-chat-to-github.md
automation/: github-project-action.md  n8n-runtime.md
constitution/: AXIOM-INDEX.md  LOGOS-CONSTITUTION.md  RAW-MEANING-PRESERVATION.md
decisions/: ADR-0001-foundation-first.md
docs/: CODEX-PROJECT-BRIEF.md  CODEX-WORKFLOW-GUIDE.md
engine/: ENGINE-FLOW.md
experiments/: experiment-template.okf.yaml  scoring-model.md  weekly-learning-report-template.md
foundation/: FOUNDATION-PROGRESS-2026-07-01-operations.md  FOUNDATION-PROGRESS-2026-07-01.md  FOUNDATION-PROGRESS-2026-07-02-automation.md  FOUNDATION-PROGRESS-2026-07-02-developer-validation.md  FOUNDATION-PROGRESS-2026-07-02-learning-laws.md  FOUNDATION-PROGRESS-2026-07-02-reference-integrity.md
laws/: EVIDENCE-CRITERIA.md  README.md
learning/: LEARNING-MODEL.md  METRIC-SIGNAL-MAP.md
logos_engine/: __init__.py  admin_test.py  pilot_response_input.py  schemas.py  validate.py  wf_0001_idea_intake.py  wf_0001_issue.py  wf_0002_belief_movement.py
ontology/: GLOSSARY.md  ID-CONVENTIONS.md  OBJECT-LIFECYCLE.md  OBJECTS.md  RELATIONSHIPS.md  UNIVERSAL-VS-RUNTIME.md
patterns/: STORY-PATTERNS.md
projects/: GITHUB-PROJECTS-MANAGEMENT.md  LOGOS-ENGINE-PROJECT.okf.yaml
roadmap/: FOUNDATION-I-REFERENCE-INTEGRITY.md  FOUNDATION-TASK-GROUPS.md  LOGOS-BUILD-PLAN.md  LOGOS-BUILD-PLAN.okf.yaml  PILOT-0001-N8N-IMPLEMENTATION-PLAN.md
schemas/: README.md  (+11 more)
(+166 files in other folders)
